--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ __pycache__/metrics.cpython-311.pyc
 __pycache__/get_idle_tran.cpython-311.pyc
 __pycache__/get_pg_stat_statements.cpython-311.pyc
 main.sublime-workspace
+gp_monitoring.log
