--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ __pycache__/get_idle_tran.cpython-311.pyc
 __pycache__/get_pg_stat_statements.cpython-311.pyc
 main.sublime-workspace
 gp_monitoring.log
+gp_monitoring.log
