--- a/config.ini
+++ b/config.ini
@@ -13,8 +13,8 @@ port  = 29591
 database  = ce-emp-prd
 ctimeout = 60
 pool = 100
-user = ce_emp_prd_dbo
-password = Ce_emp_prd_dbo01
+user = mon_user
+password = Mon_user01
 backup_path = /root/gp/backup
 instance_id= 18a9aa07-7f31-4386-9c6c-858a33559d7a
 backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
