--- a/config.ini
+++ b/config.ini
@@ -13,13 +13,12 @@ port  = 29591
 database  = ce-emp-prd
 ctimeout = 60
 pool = 100
-user = mon_user
-password = Mon_user01
+user = 
+password = 
 backup_path = /root/gp/backup
 instance_id= 18a9aa07-7f31-4386-9c6c-858a33559d7a
 backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
-secret= bd5b663f-d128-487c-af4c-7a18f97dbd64
-region= fr-par
+secret= 
 
 [database_to_reload]
 url = postgres://ce_emp_prd_dbo:Ce_emp_prd_dbo01@51.159.74.238:29591/ce-emp-prd
@@ -48,8 +47,8 @@ port  = 29591
 database  = ce-emp-prd
 ctimeout = 60
 pool = 100
-user = ce_emp_prd_dbo
-password = Ce_emp_prd_dbo01
+user =
+password = 
 
 [mail]
 mailist = 
