--- a/config.ini
+++ b/config.ini
@@ -7,8 +7,7 @@ level = info
 file = /var/log/web-server.log
 
 [database]
-url = postgres://ce_emp_prd_dbo:Ce_emp_prd_dbo01@51.159.74.238:29591/ce-emp-prd
-host = 51.159.74.238
+url = 
 port  = 29591
 database  = ce-emp-prd
 ctimeout = 60
@@ -21,8 +20,8 @@ backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
 secret= 
 
 [database_to_reload]
-url = postgres://ce_emp_prd_dbo:Ce_emp_prd_dbo01@51.159.74.238:29591/ce-emp-prd
-host = 51.159.74.238
+url = 
+host = 
 port  = 29591
 database  = test
 ctimeout = 60
@@ -41,9 +40,9 @@ cpu_usage_percent = 80
 connection = 200
 
 [admin]
-url = postgres://ce_emp_prd_dbo:Ce_emp_prd_dbo01@51.159.74.238:29591/ce-emp-prd
-host = 51.159.74.238
-port  = 29591
+url = 
+host = 
+port  = 
 database  = ce-emp-prd
 ctimeout = 60
 pool = 100
