add backup mysql with scaleway

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,21 @@ backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
 secret= bd5b663f-d128-487c-af4c-7a18f97dbd64
 region= fr-par
 
+[mysqldatabase]
+url = postgres://gperez:Letouille0101@51.159.27.98:7347/ce-prod
+host = 51.159.27.98
+port  = 7347
+database  = ce-prod
+ctimeout = 60
+pool = 100
+user = mon_user
+password = Mon_user01
+backup_path = /root/gp/backup
+instance_id= 3a4d83ea-c8a0-43c2-bcd9-8aa517f3cb17
+backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
+secret= bd5b663f-d128-487c-af4c-7a18f97dbd64
+region= fr-par
+
 [database_to_reload]
 url = postgres://ce_emp_prd_dbo:Ce_emp_prd_dbo01@51.159.74.238:29591/ce-emp-prd
 host = 51.159.74.238
@@ -53,5 +68,3 @@ password = Ce_emp_prd_dbo01
 
 [mail]
 mailist = 
-
-[mysql]
