--- a/config.ini
+++ b/config.ini
@@ -34,6 +34,21 @@ backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
 secret= bd5b663f-d128-487c-af4c-7a18f97dbd64
 region= fr-par
 
+[mysqldatabase_platform]
+url = postgres://platform_prod:yJLwsqzBgt6CrRNuap;10@51.159.27.98:7347/ce-prod
+host = 51.159.27.98
+port  = 7347
+database  = ce-prod
+ctimeout = 60
+pool = 100
+user = platform_prod
+password = yJLwsqzBgt6CrRNuap;10
+backup_path = /root/gp/backup
+instance_id= 3a4d83ea-c8a0-43c2-bcd9-8aa517f3cb17
+backup_api= https://api.scaleway.com/rdb/v1/regions/fr-par/backups
+secret= bd5b663f-d128-487c-af4c-7a18f97dbd64
+region= fr-par
+
 [database_to_reload]
 url = 
 host = 
@@ -66,8 +81,9 @@ password =
 
 [mail]
 mailist = 
-<<<<<<< HEAD
-=======
 
 [mysql]
->>>>>>> 2f0a1a477e2e850ae88ac5c653b0d2fee668d164
+
+[s3]
+
+
